= v0.6.5 - EDGE
* enhancements
  * An endpoint can now "call" JavaScript functions that accept multiple parameters, by specifying an array, e.g.:
      {:some_js_function => [arg1, arg2]}
  * New API: +js_mixin+ method (see RDocs)
  * Set JS class property +load_mask_msg+ if you want to see a mask when a component gets dynamically loaded with +loadComponent+. Also +load_mask_msg_cls+ will be used as the second param for the Ext.Element#mask call, and defaults to "x-mask-loading".

* bug fix
  * The "componentload" event now gets fired after a component is dynamically loaded. The handler receives the instance of the loaded component.
  * Feedback does not insert a new div every time being called
  * JS class caching was broken for name-scoped classes
  * When a component was dynamically loaded into a hidden container, it wasn't shown when the container got shown next time

= v0.6.4 - 2010-11-05
* enhancements
  * Implemented Netzke.isLoading(), useful for testing
  * Persistence support

* API change
  * +endpoint+ DSL call now results in a method called <endpoint_name>_endpoint, _not_ just <endpoint_name> (beware when overriding endpoint definitions, or calling endpoint methods on child components)
  * Using +api+ for endpoint declaration is gone

= v0.6.3 - 2010-11-02
* The +ext_config+ option is back, deprecated.

= v0.6.2 - 2010-10-27
* Introduced the Symbol#component method to declare components in the config (instead of now deprecated js_component).

= v0.6.1 - 2010-10-26
* Disabled buggy implementation of rendering on-page JS classes in netzke.js instead of main page.

= v0.6.0 - 2010-10-24
* Rails3 compatibility, thorough rewrite
* Much more thorough testing

* API backward incompatibility
  * +ext_config+ config level is removed; put all that configuration in the top level
  * mentioning actions in the +bbar+, +tbar+, etc, should be explicit, e.g.:

      :bbar => [:apply.action, :delete.action]

  * +late_aggregatee+ is now +lazy_loading+