@@ -27,15 +27,30 @@ module Netzke
         res
       end
 
-      # Definition of CSS files which will be dynamically loaded together with this component
-      # e.g.
-      # css_include "#{File.dirname(__FILE__)}/themis_navigation/static.css"
-      # or
-      # css_include "#{File.dirname(__FILE__)}/themis_navigation/one.css","#{File.dirname(__FILE__)}/themis_navigation/two.css"
-      #  This is alternative to defining self.include_css
+      # Use it to specify stylesheet files to be loaded along with this component.
+      # It may accept one or more symbols or strings. Strings will be interpreted as full paths to included files:
+      #
+      #     css_include "#{File.dirname(__FILE__)}/my_component/one.css", "#{File.dirname(__FILE__)}/my_component/two.css"
+      #
+      # Symbols will be expanded following a convention, e.g.:
+      #
+      #     class MyComponent < Netzke::Base
+      #       css_include :some_library
+      #       # ...
+      #     end
+      #
+      # This will "include" a stylesheet file +{component_location}/my_component/stylesheets/some_library.js+
       def css_include(*args)
-        self.css_included_files += args
+        callr = caller.first
+
+        self.css_included_files += args.map{ |a| a.is_a?(Symbol) ? expand_css_include_path(a, callr) : a }
       end
+
+      protected
+
+        def expand_css_include_path(sym, callr) # :nodoc:
+          %Q(#{callr.split(".rb:").first}/stylesheets/#{sym}.css)
+        end
 
     end
 
