@@ -103,6 +103,7 @@ Gem::Specification.new do |s|
     "test/rails_app/app/components/component_loader.rb",
     "test/rails_app/app/components/component_with_actions.rb",
     "test/rails_app/app/components/component_with_custom_css.rb",
+    "test/rails_app/app/components/component_with_custom_css/stylesheets/custom.css",
     "test/rails_app/app/components/component_with_included_js.rb",
     "test/rails_app/app/components/component_with_js_mixin.rb",
     "test/rails_app/app/components/component_with_js_mixin/javascripts/extra_one.js",
@@ -110,7 +111,6 @@ Gem::Specification.new do |s|
     "test/rails_app/app/components/component_with_js_mixin/javascripts/method_set_one.js",
     "test/rails_app/app/components/component_with_js_mixin/javascripts/method_set_two.js",
     "test/rails_app/app/components/component_with_session_persistence.rb",
-    "test/rails_app/app/components/custom.css",
     "test/rails_app/app/components/deprecated/server_caller.rb",
     "test/rails_app/app/components/extended_component_with_actions.rb",
     "test/rails_app/app/components/extended_component_with_js_mixin.rb",
